Fix a crash scrolling the address list in the mail compose window (bug 142542).  r=ben, sr=jag, a=asa.